--- a/app/src/main/res/layout/list_item_secretary.xml
+++ b/app/src/main/res/layout/list_item_secretary.xml
@@ -25,7 +25,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="提示标题"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="@dimen/text_size_small" />
         </RelativeLayout>
         <include
@@ -54,15 +54,10 @@
             android:textSize="@dimen/text_size_small"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/list_item_secretary_img"
-            style="@style/public_img"
-            android:layout_gravity="center"
-            android:layout_margin="10dip"
-            android:contentDescription="活动奖品图标"
-            android:visibility="gone" />
     </LinearLayout>
-
+    <View
+        style="@style/line_h"
+        />
     <RelativeLayout
         android:id="@+id/list_item_secretary_layout2"
         style="@style/secretary_tips_linear_time"
@@ -100,7 +95,7 @@
             android:paddingLeft="15dip"
             android:text=""
             android:textSize="14sp"
-            android:textColor="@color/white" />
+            android:textColor="@color/text_color_gray2" />
 
         <TextView
             android:id="@+id/list_item_secretary_txt5"
