--- a/app/src/main/res/color/report_datepicker_btn_text_color.xml
+++ b/app/src/main/res/color/report_datepicker_btn_text_color.xml
@@ -3,5 +3,5 @@
     <item android:state_selected="true" android:color="@color/white" />
     <item android:state_focused="true" android:color="@color/white" />
     <item android:state_pressed="true" android:color="@color/white" />
-    <item android:color="@color/orange"/>
+    <item android:color="#478ce0"/>
 </selector>
