--- a/app/src/main/res/drawable/activity_information_centre_tips_kuang.xml
+++ b/app/src/main/res/drawable/activity_information_centre_tips_kuang.xml
@@ -2,18 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="#5c221c" />
-            <corners android:radius="3dp" />
-            <stroke
-                android:width="3px"
-                android:color="#b22d14" />
+            <solid android:color="#478cea" />
+            <corners android:radius="6px" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#b22d14" />
-            <corners android:radius="3dp" />
+            <solid android:color="#2c6cc2" />
+            <corners android:radius="6px" />
         </shape>
     </item>
 
