--- a/app/src/main/res/drawable/report_circle_bg.xml
+++ b/app/src/main/res/drawable/report_circle_bg.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false">
         <shape android:shape="oval">
-            <stroke android:width="3px" android:color="#666666"/>
+            <stroke android:width="3px" android:color="@color/text_color_gray1"/>
             <size android:width="34dp" android:height="34dp"/>
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="oval">
-            <solid android:color="#b22d14"/>
+            <solid android:color="#478cea"/>
             <size android:width="34dp" android:height="34dp"/>
         </shape>
     </item>
