--- a/app/src/main/res/drawable/report_date_selected_bg.xml
+++ b/app/src/main/res/drawable/report_date_selected_bg.xml
@@ -4,6 +4,6 @@
    <item android:drawable="@color/disclaimer" android:state_pressed="true"></item>
     <item android:drawable="@color/disclaimer" android:state_focused="true"></item>
     <item android:drawable="@color/disclaimer" android:state_selected="true"></item>
-    <item android:drawable="@drawable/orange_frame"></item>
+    <item android:drawable="@drawable/blue_frame"></item>
 
 </selector>
