--- a/app/src/main/res/layout/activity_information_centre.xml
+++ b/app/src/main/res/layout/activity_information_centre.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/layout_background"
+    >
     <ListView
         android:id="@+id/activity_information_centre_list"
-        style="@style/public_listView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#2e2d33"
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
          />
 </LinearLayout>
