--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,14 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/text_color_gray3"
+        android:background="@color/setting_item_divider_bg"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="56dp"
+        android:background="@color/white"
+        >
         <LinearLayout
             android:id="@+id/tab_ll_home"
             android:layout_width="0dp"
