--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background"
+    android:background="@color/white"
     >
     <FrameLayout
         android:id="@+id/fl_title"
@@ -17,27 +17,56 @@
     <LinearLayout
         android:id="@+id/ll_homepage"
         android:layout_width="match_parent"
-        android:layout_height="192dp"
+        android:layout_height="175dp"
         android:background="@drawable/home_bg"
         android:orientation="vertical"
         android:layout_below="@+id/fl_title"
-        android:paddingLeft="10dp">
+        >
         <TextView
             android:id="@+id/home_txt_date"
             android:layout_width="wrap_content"
-            android:layout_height="18dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="6dp"
-            android:textSize="16sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:layout_marginLeft="12dp"
+            android:textSize="24sp"
             android:includeFontPadding="false"
-            android:textColor="#ffffff" />
+            android:text="2016-03-09"
+            android:textColor="@color/text_color_gray3" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/home_location_icon"
+            android:drawablePadding="10dp"
+            android:layout_marginLeft="12dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:text="杭州"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:text="晴转多云"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:text="13-28"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            />
         <ImageView
             android:id="@+id/activity_home_iv_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/home_driving_report_icon" />
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/home_report_icon_bg"
+            />
     </LinearLayout>
     <ScrollView
         android:layout_width="wrap_content"
@@ -54,10 +83,10 @@
 
     <ImageView
         android:id="@+id/iv_line"
-        android:layout_above="@+id/activity_home_relative2"
+        android:layout_above="@id/activity_home_relative2"
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/text_color_gray3"
+        android:layout_height="10dp"
+        android:background="@color/layout_background"
         />
     <RelativeLayout
         android:id="@+id/activity_home_relative2"
@@ -75,7 +104,7 @@
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="12dip"
-            android:src="@drawable/icon_information_centre" />
+            android:src="@drawable/icon_doride_assistant" />
 
         <TextView
             android:id="@+id/activity_home_txt2"
@@ -85,8 +114,8 @@
             android:layout_marginRight="15dip"
             android:layout_marginTop="2dip"
             android:layout_toRightOf="@id/activity_home_img1"
-            android:text="信息中心"
-            android:textColor="@color/white"
+            android:text="大乘助手"
+            android:textColor="@color/text_color_gray3"
             android:textSize="16sp" />
 
         <TextView
@@ -131,7 +160,7 @@
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/text_color_gray1"
-                android:textSize="13sp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
