--- a/app/src/main/res/layout/layout_report_grid.xml
+++ b/app/src/main/res/layout/layout_report_grid.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/line1"
@@ -20,7 +20,7 @@
             android:id="@+id/layout_report_grid_img1"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@drawable/icon_endurance_mileage_bg" />
+            android:background="@drawable/icon_mileage_bg" />
 
         <TextView
             android:id="@+id/layout_report_grid_linear1_txt2"
@@ -30,7 +30,7 @@
         <TextView
             android:id="@+id/layout_report_grid_linear1_txt1"
             style="@style/layout_report_grid_txt1"
-            android:text="续航里程(公里)" />
+            android:text="总里(公里)" />
     </LinearLayout>
 
     <LinearLayout
@@ -43,7 +43,7 @@
             android:id="@+id/layout_report_grid_img2"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@drawable/icon_mileage_bg" />
+            android:background="@drawable/icon_time_bg" />
 
         <TextView
             android:id="@+id/layout_report_grid_linear2_txt2"
@@ -61,7 +61,9 @@
         style="@style/layout_report_grid_layout"
         android:layout_below="@id/layout_report_grid_linear1"
         android:layout_marginTop="28dp"
-        android:layout_toLeftOf="@id/line1">
+        android:layout_toLeftOf="@id/line1"
+        android:layout_marginBottom="29dp"
+        >
 
         <ImageView
             android:id="@+id/layout_report_grid_img3"
@@ -85,6 +87,7 @@
         style="@style/layout_report_grid_layout"
         android:layout_below="@id/layout_report_grid_linear2"
         android:layout_marginTop="28dp"
+        android:layout_marginBottom="29dp"
         android:layout_toRightOf="@id/line1">
 
         <ImageView
