--- a/app/src/main/res/layout/layout_secretary_report_table.xml
+++ b/app/src/main/res/layout/layout_secretary_report_table.xml
@@ -32,7 +32,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_below="@id/text_title2"
-        android:background="@color/text_color_gray3" />
+        android:background="@color/setting_item_divider_bg" />
 
     <TextView
         android:id="@+id/layout_secretary_report_table_txt2"
@@ -61,7 +61,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_below="@id/layout_secretary_report_table_txt1"
-        android:background="@color/text_color_gray3" />
+         />
 
     <TextView
         android:id="@+id/text_title5"
@@ -90,7 +90,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_below="@id/text_title4"
-        android:background="@color/text_color_gray3" />
+        />
 
     <TextView
         android:id="@+id/layout_secretary_report_table_txt5"
@@ -117,12 +117,12 @@
         android:layout_width="1dip"
         android:layout_height="fill_parent"
         android:layout_alignRight="@id/text_title1"
-        android:background="@color/text_color_gray3" />
+        android:background="@color/text_color_gray4" />
 
     <TextView
         android:layout_width="1dip"
         android:layout_height="fill_parent"
         android:layout_alignRight="@id/text_title2"
-        android:background="@color/text_color_gray3" />
+        android:background="@color/text_color_gray4" />
 
 </RelativeLayout>
