--- a/app/src/main/res/layout/list_item_secretary_types.xml
+++ b/app/src/main/res/layout/list_item_secretary_types.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#2e2d33"
-    android:paddingLeft="30dip" >
+    android:layout_height="60dp"
+    android:background="@color/white"
+     >
 
     <ImageView
         android:id="@+id/activity_information_centre_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginRight="12dip"
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="20dp" />
 
     <RelativeLayout
@@ -28,7 +29,7 @@
             android:id="@+id/activity_information_centre_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray3"
             android:textSize="16sp" />
 
         <ImageView
@@ -49,7 +50,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/text_color_gray1"
-            android:textSize="13sp" />
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <TextView
@@ -65,6 +66,8 @@
         android:id="@+id/line"
         style="@style/line_h"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="30dp" />
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="12dp"
+        />
 
 </RelativeLayout>
