--- a/app/src/main/res/values-hdpi/styles.xml
+++ b/app/src/main/res/values-hdpi/styles.xml
@@ -40,35 +40,37 @@
     <style name="secretary_report_txt1">
         <item name="android:layout_width">108dip</item>
         <item name="android:layout_height">30dip</item>
-        <item name="android:textColor">@color/text_color_gray1</item>
+        <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">#313037</item>
+        <item name="android:background">@color/layout_background</item>
     </style>
 
     <style name="secretary_report_txt2">
         <item name="android:layout_width">108dip</item>
         <item name="android:layout_height">30dip</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
         <item name="android:gravity">center</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="secretary_report_txt3">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">30dip</item>
-        <item name="android:textColor">@color/text_color_gray1</item>
+        <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">#313037</item>
+        <item name="android:background">@color/layout_background</item>
     </style>
 
     <style name="secretary_report_txt4">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">30dip</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
         <item name="android:gravity">center</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <!-- 行车报告 -->
