1，调用远程接口，获取油量等信息 2，封装glide加载图片 3，修改设置页面UI

--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -94,6 +94,7 @@
         style="@style/setting_page_item_style"
         android:layout_marginTop="10dp"
         android:background="@color/white"
+        android:visibility="gone"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -115,6 +116,7 @@
     <View style="@style/setting_page_item_divider" />
     <LinearLayout
         style="@style/setting_page_item_style"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
