--- a/app/src/main/res/layout/activity_car_tires_state.xml
+++ b/app/src/main/res/layout/activity_car_tires_state.xml
@@ -59,6 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
+                    android:visibility="gone"
                     android:textColor="@color/text_color_gray1"
                     />
             </LinearLayout>
@@ -95,6 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14dp"
+            android:visibility="gone"
             android:textColor="@color/text_color_gray1"
             />
     </LinearLayout>
@@ -130,6 +132,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
+                    android:visibility="gone"
                     android:textColor="@color/text_color_gray1"
                     />
             </LinearLayout>
@@ -165,6 +168,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
+                    android:visibility="gone"
                     android:textColor="@color/text_color_gray1"
                     />
             </LinearLayout>
