--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -36,12 +36,12 @@
 
                 <ImageView
                     android:id="@+id/avatar"
-                    android:layout_width="50dip"
-                    android:layout_height="50dip"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitXY"
-                    android:src="@mipmap/default_avater" />
+                     />
 
                 <TextView
                     android:id="@+id/tx_person_name"
@@ -71,8 +71,8 @@
                 android:background="@color/white">
 
                 <ImageView
-                    android:layout_width="18dip"
-                    android:layout_height="18dip"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitXY"
@@ -109,8 +109,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -142,8 +142,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -175,8 +175,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -208,8 +208,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -248,8 +248,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -292,8 +292,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -335,8 +335,8 @@
                     android:layout_width="match_parent">
 
                     <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
@@ -366,8 +366,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_marginBottom="18dp"
-                android:layout_marginLeft="18dip"
-                android:layout_marginRight="18dip"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:layout_marginTop="77dip"
                 android:background="@drawable/login_out_btn_bg"
                 android:gravity="center"
