--- a/app/src/main/res/layout/activity_report_month.xml
+++ b/app/src/main/res/layout/activity_report_month.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/report_month_bg"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -39,7 +39,7 @@
                 android:layout_marginTop="24dp"
                 android:includeFontPadding="false"
                 android:text="90.6"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -50,8 +50,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value1"
                 android:layout_marginLeft="8dp"
                 android:text="L"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:id="@+id/item_report_month_txt_title"
                 android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
                 android:layout_marginLeft="8dp"
                 android:includeFontPadding="false"
                 android:text="本月总油耗"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
         <RelativeLayout
@@ -86,7 +86,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="824"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -96,8 +96,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value2"
                 android:layout_marginLeft="8dp"
                 android:text="Km"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="本月行程"
                 android:includeFontPadding="false"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
 
@@ -134,7 +134,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="123"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -144,8 +144,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value3"
                 android:layout_marginLeft="8dp"
                 android:text="Km/h"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="本月最高时速"
                 android:includeFontPadding="false"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
         <RelativeLayout
@@ -179,7 +179,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="9.8"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -189,8 +189,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value4"
                 android:layout_marginLeft="8dp"
                 android:text="L/100Km"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -199,7 +199,7 @@
                 android:layout_marginLeft="8dp"
                 android:includeFontPadding="false"
                 android:text="本月平均油耗"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
         <RelativeLayout
@@ -225,7 +225,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="14"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -235,8 +235,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value5"
                 android:layout_marginLeft="8dp"
                 android:text="h"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -245,7 +245,7 @@
                 android:layout_marginLeft="8dp"
                 android:includeFontPadding="false"
                 android:text="本月行驶时间"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
         <RelativeLayout
@@ -272,7 +272,7 @@
                 android:layout_marginLeft="8dp"
                 android:text="58.8"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="23sp" />
 
             <TextView
@@ -282,8 +282,8 @@
                 android:layout_toRightOf="@id/item_report_month_txt_value6"
                 android:layout_marginLeft="8dp"
                 android:text="Km/h"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="14sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -292,7 +292,7 @@
                 android:layout_marginLeft="8dp"
                 android:includeFontPadding="false"
                 android:text="本月平均时速"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="14sp" />
         </RelativeLayout>
 
@@ -307,7 +307,7 @@
             android:layout_below="@id/report_month_lay_month_report"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/report_month_bg"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -318,8 +318,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="每月耗油"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textColor="@color/text_color_gray3"
+                android:textSize="16sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -336,7 +336,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="10dp"
                 android:text="2017年"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="16sp" />
 
             <View
@@ -345,7 +345,7 @@
                 android:layout_height="0.5dp"
                 android:layout_below="@id/report_month_txt_fuel"
                 android:layout_marginBottom="0dp"
-                android:background="#4d4d4d" />
+                android:background="@color/text_color_gray4" />
 
             <com.carlt.doride.ui.view.BarGraph
                 android:id="@+id/report_month_bargraph_fuel"
@@ -366,7 +366,7 @@
             android:layout_below="@id/report_month_lay_month_fuel"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/report_month_bg"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -377,7 +377,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="每月行驶里程"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="16sp" />
             <TextView
                 android:layout_width="wrap_content"
@@ -395,7 +395,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="10dp"
                 android:text="2017年"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="16sp" />
 
             <View
@@ -404,7 +404,7 @@
                 android:layout_height="0.5dp"
                 android:layout_below="@+id/report_month_txt_miles"
                 android:layout_marginBottom="0dp"
-                android:background="#4d4d4d" />
+                android:background="@color/text_color_gray4" />
 
             <com.carlt.doride.ui.view.BarGraph
                 android:id="@+id/report_month_bargraph_miles"
@@ -425,7 +425,8 @@
             android:layout_below="@id/report_month_lay_month_miles"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/report_month_bg"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -436,7 +437,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="每月行驶时间"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="16sp" />
             <TextView
                 android:layout_width="wrap_content"
@@ -454,7 +455,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="10dp"
                 android:text="2017年"
-                android:textColor="@color/text_color_gray1"
+                android:textColor="@color/text_color_gray2"
                 android:textSize="16sp" />
 
             <View
@@ -463,11 +464,11 @@
                 android:layout_height="0.5dp"
                 android:layout_below="@+id/report_month_txt_time"
                 android:layout_marginBottom="0dp"
-                android:background="#4d4d4d" />
+                android:background="@color/text_color_gray4" />
 
             <com.carlt.doride.ui.view.BarGraph
                 android:id="@+id/report_month_bargraph_time"
-                zlink:barColor="#2c77c0"
+                zlink:barColor="#478cea"
                 zlink:textColor="@color/text_color_gray1"
                 zlink:textSize="12sp"
                 zlink:type="time"
