--- a/app/src/main/res/layout/head_calendar.xml
+++ b/app/src/main/res/layout/head_calendar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="49dp"
-    android:background="#2e2d33"
+    android:background="@color/white"
      >
 
     <ImageView
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="2014年"
-        android:textColor="@color/white"
+        android:textColor="@color/text_color_gray3"
         android:textSize="16sp" />
 
     <ImageView
@@ -33,8 +33,8 @@
         android:src="@drawable/arrow_calendar_right" />
     <View
         android:layout_width="fill_parent"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:layout_alignParentBottom="true"
-        android:background="#171922"
+        android:background="@color/text_color_gray4"
         />
 </RelativeLayout>
