--- a/app/src/main/res/drawable/report_month_bg.xml
+++ b/app/src/main/res/drawable/report_month_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <corners android:radius="15px" />
-
-    <solid android:color="#2e2d33" />
+    <stroke android:width="2px" android:color="@color/text_color_gray4"/>
+    <solid android:color="@color/white" />
 
 </shape>
