--- a/app/src/main/res/drawable/verification_send_bg.xml
+++ b/app/src/main/res/drawable/verification_send_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <corners android:radius="6px" />
-
-    <solid android:color="#b3b3b3" />
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/verification_send_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/verification_send_pressed" android:state_selected="true"/>
+    <item android:drawable="@drawable/verification_send_pressed" android:state_checked="true"/>
+    <item android:drawable="@drawable/verification_sending_bg" android:state_enabled="false"/>
+    <item android:drawable="@drawable/verification_send_pressed_no"/>
+</selector>
