--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -94,6 +94,7 @@
             android:gravity="center_vertical"
             android:hint="请输入密码"
             android:inputType="textPassword"
+            android:digits="@string/pwd_filter_input_string"
             android:maxLength="32"
             android:selectAllOnFocus="true" />
 
