--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -66,7 +66,9 @@
             android:focusableInTouchMode="true"
             android:focusable="true"
             android:inputType="textPassword"
-            android:maxLength="32" />
+            android:maxLength="32"
+            android:digits="@string/pwd_filter_input_string"
+            />
 
         <ImageView
             android:id="@+id/register_passwd_toggle"
@@ -96,7 +98,9 @@
             android:inputType="textPassword"
             android:focusableInTouchMode="true"
             android:focusable="true"
-            android:maxLength="32" />
+            android:maxLength="32"
+            android:digits="@string/pwd_filter_input_string"
+            />
 
         <ImageView
             android:id="@+id/register_passwd_again_toggle"
