--- a/app/src/main/res/layout/list_item_report_day.xml
+++ b/app/src/main/res/layout/list_item_report_day.xml
@@ -4,7 +4,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent"
+    android:background="@drawable/report_day_item_bg"
     android:paddingBottom="5dp"
     android:paddingTop="5dp" >
 
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/listItem_day_driveInfo"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="@dimen/text_size_small_s1" />
 
             <TextView
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/listItem_day_driveInfo"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray1"
                 android:layout_marginTop="8dip"/>
             <TextView
                 android:id="@+id/listItem_day_txt_miles"
