--- a/app/src/main/res/layout/loading_activity_with_title.xml
+++ b/app/src/main/res/layout/loading_activity_with_title.xml
@@ -41,7 +41,7 @@
             android:layout_marginRight="20dip"
             android:layout_marginTop="10dip"
             android:text="等待中"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray3"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -78,7 +78,7 @@
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:text="点击重试"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color_gray3"
             android:textSize="14sp"
             android:paddingTop="15dip"
             android:paddingBottom="10dip" />
