--- a/app/src/main/res/layout/report_rili_day.xml
+++ b/app/src/main/res/layout/report_rili_day.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/item_bg"
+    android:background="@color/white"
     android:id="@+id/rili_day_rl"
     android:orientation="vertical" >
 
@@ -19,7 +19,7 @@
         android:layout_above="@id/rili_day_div"
         android:gravity="bottom|center_horizontal"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/rili_day_text2"
@@ -30,8 +30,8 @@
         android:layout_centerHorizontal="true"
         android:gravity="bottom|center_horizontal"
         android:paddingBottom="5dip"
-        android:textColor="#27C14C"
-        android:textSize="15sp" 
+        android:textColor="@color/text_color_gray1"
+        android:textSize="14sp"
         android:visibility="gone"/>
     <ImageView 
         android:id="@+id/rili_day_img"
