--- a/app/src/main/res/layout/rili_head.xml
+++ b/app/src/main/res/layout/rili_head.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="36dip"
-    android:background="#2e2d33"
+    android:background="@color/white"
     android:orientation="horizontal" >
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:text="日"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -21,7 +21,7 @@
         android:layout_weight="1"
         android:text="一"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -30,7 +30,7 @@
         android:layout_weight="1"
         android:text="二"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -39,7 +39,7 @@
         android:layout_weight="1"
         android:text="三"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -48,7 +48,7 @@
         android:layout_weight="1"
         android:text="四"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -57,7 +57,7 @@
         android:layout_weight="1"
         android:text="五"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
     <TextView
         style="@style/rili_head_text"
@@ -66,6 +66,6 @@
         android:layout_weight="1"
         android:text="六"
         android:textSize="14sp"
-        android:textColor="@color/text_color_gray2" />
+        android:textColor="@color/text_color_gray1" />
 
 </LinearLayout>
