--- a/app/src/main/res/values-xhdpi/styles.xml
+++ b/app/src/main/res/values-xhdpi/styles.xml
@@ -479,7 +479,7 @@
     <style name="report_calendar_month_linear1">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">55dip</item>
-        <item name="android:background">#ffffff</item>
+        <item name="android:background">@color/white</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
@@ -489,14 +489,14 @@
         <item name="android:layout_height">fill_parent</item>
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">#2e2d33</item>
+        <item name="android:background">@color/white</item>
     </style>
     <!-- <item name="android:background">@drawable/calendar_report_cell_bg</item> -->
     <style name="report_calendar_month_txt1">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center</item>
     </style>
@@ -512,13 +512,13 @@
     <style name="report_calendar_month_linev">
         <item name="android:layout_width">1dip</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:background">#171922</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="report_calendar_month_lineh">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">1dip</item>
-        <item name="android:background">#171922</item>
+        <item name="android:background">@color/white</item>
     </style>
     <!-- 我的奖品 -->
     <style name="career_reward_txt1">
