--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,14 +119,14 @@
     </style>
 
     <style name="listItem_day_info_title">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
         <item name="android:drawablePadding">2dp</item>
     </style>
 
     <style name="listItem_day_info_txt">
-        <item name="android:textColor">@color/text_color_gray1</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -174,7 +174,7 @@
     <style name="report_calendar_month_linear1">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">55dip</item>
-        <item name="android:background">#2e2d33</item>
+        <item name="android:background">@color/white</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
@@ -184,14 +184,14 @@
         <item name="android:layout_height">fill_parent</item>
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">#2e2d33</item>
+        <item name="android:background">@color/white</item>
     </style>
     <!-- <item name="android:background">@drawable/calendar_report_cell_bg</item> -->
     <style name="report_calendar_month_txt1">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center</item>
     </style>
@@ -207,13 +207,13 @@
     <style name="report_calendar_month_linev">
         <item name="android:layout_width">1dip</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:background">#171922</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="report_calendar_month_lineh">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">1dip</item>
-        <item name="android:background">#171922</item>
+        <item name="android:background">@color/white</item>
     </style>
 
 
@@ -254,7 +254,7 @@
         <item name="android:padding">4dp</item>
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">30dp</item>
-        <item name="android:background">@drawable/verification_send_bg</item>
+        <item name="android:background">@drawable/verification_send_pressed_no</item>
         <item name="android:gravity">center</item>
     </style>
 </resources>
