1，修改设置页修改远程密码密码输入框 2，修改性别选择dialog布局 3，调式密码修改接口，处理相关逻辑

--- a/app/src/main/res/layout/activity_avatar_display.xml
+++ b/app/src/main/res/layout/activity_avatar_display.xml
@@ -6,9 +6,10 @@
     tools:context="com.carlt.doride.ui.activity.setting.PhotoDisplayActivity">
     <ImageView
         android:id="@+id/avatar_display"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:scaleType="fitXY"
+        android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_name"/>
     <LinearLayout
