--- a/app/src/main/res/layout/activity_information_centre_tips.xml
+++ b/app/src/main/res/layout/activity_information_centre_tips.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background"
-    android:orientation="vertical">
+    android:background="@color/layout_background">
 
     <LinearLayout
         android:id="@+id/activity_career_secretary_tips_title"
