--- a/app/src/main/res/layout/activity_reset_remote_passwd.xml
+++ b/app/src/main/res/layout/activity_reset_remote_passwd.xml
@@ -1,74 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/main_color"
-    tools:context="com.carlt.doride.ui.activity.setting.ResetRemotePasswdActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/main_color"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical"
+              tools:context="com.carlt.doride.ui.activity.setting.ResetRemotePasswdActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_color_gray1"
-        android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
-        android:text="@string/old_remote_passwd_txt"/>
+        android:text="@string/old_remote_passwd_txt"
+        android:textColor="@color/text_color_gray1"
+        android:textSize="12sp"/>
+
     <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_old_remote_passwd"
-        android:background="@drawable/romote_edit_bg"
-        android:layout_height="44dp"
         android:layout_width="match_parent"
+        android:layout_height="44dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="5dp"
+        android:background="@drawable/romote_edit_bg"
+        android:cursorVisible="false"
+        android:inputType="number"
         android:maxLength="6"
-        android:inputType="number"/>
+        android:textCursorDrawable="@null"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_color_gray1"
-        android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
-        android:text="@string/new_remote_passwd_txt"/>
+        android:text="@string/new_remote_passwd_txt"
+        android:textColor="@color/text_color_gray1"
+        android:textSize="12sp"/>
+
     <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_new_remote_passwd"
         android:layout_width="match_parent"
+        android:layout_height="44dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/romote_edit_bg"
-        android:layout_height="44dp"
-        android:maxLength="6"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:cursorVisible="false"
+        android:maxLength="6"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_color_gray1"
-        android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
-        android:text="@string/new_remote_passwd_again_txt"/>
+        android:text="@string/new_remote_passwd_again_txt"
+        android:textColor="@color/text_color_gray1"
+        android:textSize="12sp"/>
+
     <com.carlt.doride.ui.view.PwdEditText
         android:id="@+id/reset_new_remote_passwd_again"
         android:layout_width="match_parent"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="12dp"
-        android:background="@drawable/romote_edit_bg"
         android:layout_height="44dp"
-        android:maxLength="6"
-        android:inputType="number"/>
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/romote_edit_bg"
+        android:inputType="number"
+        android:cursorVisible="false"
+        android:maxLength="6"/>
+
     <TextView
         android:id="@+id/reset_remote_commit"
         style="@style/public_bottom_btn"
         android:layout_height="44dp"
-        android:text="@string/edit_commit"
-        android:layout_marginTop="49dip"
         android:layout_marginLeft="12dip"
-        android:textColor="@color/white"
         android:layout_marginRight="12dip"
+        android:layout_marginTop="49dip"
+        android:text="@string/edit_commit"
+        android:textColor="@color/white"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 </LinearLayout>
