修改忘记密码页面UI，Url命名替换

--- a/app/src/main/res/drawable/activity_information_centre_tips_bg.xml
+++ b/app/src/main/res/drawable/activity_information_centre_tips_bg.xml
@@ -6,7 +6,8 @@
             <corners android:radius="6px" />
         </shape>
     </item>
-    <item android:state_enabled="true" android:drawable="@drawable/activity_information_centre_tips_kuang">
+    <item android:state_enabled="true"
+        android:drawable="@drawable/activity_information_centre_tips_kuang">
 
     </item>
 </selector>
