--- a/app/src/main/res/drawable/login_input_bg.xml
+++ b/app/src/main/res/drawable/login_input_bg.xml
@@ -4,6 +4,6 @@
     <corners android:radius="6px" />
 
     <solid android:color="@color/white" />
-    <stroke android:color="@color/text_color_gray1" />
+    <stroke android:width="1px" android:color="@color/text_color_gray4" />
 
 </shape>
