--- a/app/src/main/res/layout/activity_information_centre_tips.xml
+++ b/app/src/main/res/layout/activity_information_centre_tips.xml
@@ -53,10 +53,10 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/activity_career_secretary_tips_title"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
-        android:paddingTop="10dp"></com.carlt.doride.ui.pull.PullToRefreshListView>
+        android:paddingTop="10dp"/>
 
 
     <TextView
