1，修改设置页远程密码页面密码输入框 2，处理安防报警页面下拉刷新控件动画加载不出来问题 3，依照原型图修改设置子页面UI，将style相同的控件抽取出来 4，调式发送验证码接口，处理修改登录密码和远程密码修改逻辑 5，调式密码修改所涉及的接口

--- a/app/src/main/res/layout/activity_maintenance_mlieage_edit.xml
+++ b/app/src/main/res/layout/activity_maintenance_mlieage_edit.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textColorHint="@color/text_color_gray1"
         android:paddingLeft="12dp"
         android:textSize="14sp"
