--- a/app/src/main/res/layout/activity_reset_login_passwd.xml
+++ b/app/src/main/res/layout/activity_reset_login_passwd.xml
@@ -34,6 +34,7 @@
             android:gravity="center_vertical"
             android:hint="@string/usercenter_hint_phone2"
             android:inputType="textPassword"
+            android:digits="@string/pwd_filter_input_string"
             android:maxLength="32" />
 
         <ImageView
@@ -61,6 +62,7 @@
             android:background="@null"
             android:gravity="center_vertical"
             android:hint="@string/usercenter_hint_password_reset"
+            android:digits="@string/pwd_filter_input_string"
             android:inputType="textPassword"
             android:maxLength="32" />
 
