--- a/app/src/main/res/layout/activity_vertified_code_reset_passwd.xml
+++ b/app/src/main/res/layout/activity_vertified_code_reset_passwd.xml
@@ -36,14 +36,14 @@
             android:maxLength="6"/>
         <TextView
             android:id="@+id/verification_passwd_code_send"
-            android:layout_width="80dip"
-            android:layout_height="30dip"
+            android:layout_width="90dp"
+            android:layout_height="35dp"
             android:gravity="center"
             android:text="@string/usercenter_push_validate"
             android:textColor="@color/black"
-            android:layout_marginRight="10dip"
+            android:layout_marginRight="10dp"
             android:padding="5dp"
-            android:background="@drawable/verification_send_pressed_no"
+            android:background="@drawable/verification_send_bg"
             android:textSize="14sp"/>
     </LinearLayout>
     <LinearLayout
@@ -69,7 +69,7 @@
         <ImageView
             android:id="@+id/verification_new_passwd_input_toggle"
             android:layout_width="25dp"
-            android:layout_marginRight="10dip"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"
             android:layout_height="25dp"
             android:tag="off"
