添加首页城市定位，天气，温度，行车报告月份选择缺省页面

--- a/app/src/main/res/layout/layout_report_grid.xml
+++ b/app/src/main/res/layout/layout_report_grid.xml
@@ -7,6 +7,7 @@
     <TextView
         android:id="@+id/line1"
         style="@style/line_v"
+        android:layout_marginTop="28dp"
         android:layout_centerHorizontal="true"
         android:background="@color/transparent" />
 
