--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,100 +2,114 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    >
+    android:background="@color/white">
+
     <FrameLayout
         android:id="@+id/fl_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@mipmap/title_image" />
     </FrameLayout>
-    <LinearLayout
-        android:id="@+id/ll_homepage"
-        android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:background="@drawable/home_bg"
-        android:orientation="vertical"
-        android:layout_below="@+id/fl_title"
-        >
-        <TextView
-            android:id="@+id/home_txt_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:layout_marginLeft="12dp"
-            android:textSize="24sp"
-            android:includeFontPadding="false"
-            android:text="2016-03-09"
-            android:textColor="@color/text_color_gray3" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/home_location_icon"
-            android:drawablePadding="10dp"
-            android:layout_marginLeft="12dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:text="杭州"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="晴转多云"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="13-28"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            />
-        <ImageView
-            android:id="@+id/activity_home_iv_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/home_report_icon_bg"
-            />
-    </LinearLayout>
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_homepage"
-        android:layout_above="@+id/iv_line"
-        >
-        <include
-            layout="@layout/layout_report_grid"
+        android:layout_below="@id/fl_title"
+        android:layout_above="@id/iv_line">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:orientation="vertical"
+            >
+
+
+            <LinearLayout
+                android:id="@+id/ll_homepage"
+                android:layout_width="match_parent"
+                android:layout_height="175dp"
+                android:layout_below="@+id/fl_title"
+                android:background="@drawable/home_bg"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/home_txt_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="22dp"
+                    android:includeFontPadding="false"
+                    android:text="2016-03-09"
+                    android:textColor="@color/text_color_gray3"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/home_txt_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:drawableLeft="@drawable/home_location_icon"
+                    android:drawablePadding="10dp"
+                    android:text="杭州"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/home_txt_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:text="晴转多云"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/home_txt_temputre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:text="13-28"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/activity_home_iv_report"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/home_report_icon_bg" />
+            </LinearLayout>
+
+            <include
+                layout="@layout/layout_report_grid"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                />
+        </LinearLayout>
     </ScrollView>
 
     <ImageView
         android:id="@+id/iv_line"
-        android:layout_above="@id/activity_home_relative2"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="@color/layout_background"
-        />
+        android:layout_above="@id/activity_home_relative2"
+        android:background="@color/layout_background" />
+
     <RelativeLayout
         android:id="@+id/activity_home_relative2"
         android:layout_width="fill_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:paddingLeft="20dip"
-        android:paddingRight="20dip"
-        >
+        android:paddingRight="20dip">
 
         <ImageView
             android:id="@+id/activity_home_img1"
@@ -127,13 +141,12 @@
             android:layout_toRightOf="@id/activity_home_txt2"
             android:background="@drawable/circle_orange"
             android:gravity="center"
-            android:textColor="@color/white"
             android:paddingLeft="1dp"
             android:paddingRight="1dp"
+            android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
